--- a/WkwkReportDeveloper/script/PageSample.cshtml
+++ b/WkwkReportDeveloper/script/PageSample.cshtml
@@ -69,6 +69,21 @@
 
         <h2>外部ファイル呼び出し</h2>
         @Include("_part1")
+
+        <h2>横に長いテーブル</h2>
+
+        <table width="250">
+            @for (int i = 0; i < 10; i++)
+            {
+                <tr>
+                    @for (int j = 0; j < 20; j++)
+                    {
+                        <td nowrap>@string.Format("i={0}, j={1}",i,j)</td>
+                    }
+                </tr>
+            }
+        </table>
+
     </section>
 
 
